set(NETUDP_EXAMPLE1_TARGET ${NETUDP_TARGET}_EchoClient)
message(STATUS "Add Example : ${NETUDP_EXAMPLE1_TARGET}")
add_executable(${NETUDP_EXAMPLE1_TARGET} "${CMAKE_CURRENT_SOURCE_DIR}/EchoClient.cpp")
target_link_libraries(${NETUDP_EXAMPLE1_TARGET} NetUdp)
set_target_properties(${NETUDP_EXAMPLE1_TARGET} PROPERTIES FOLDER "${NETUDP_FOLDER_PREFIX}/Examples")

set(NETUDP_EXAMPLE2_TARGET ${NETUDP_TARGET}_EchoServer)
message(STATUS "Add Example : ${NETUDP_EXAMPLE2_TARGET}")
add_executable(${NETUDP_EXAMPLE2_TARGET} "${CMAKE_CURRENT_SOURCE_DIR}/EchoServer.cpp")
target_link_libraries(${NETUDP_EXAMPLE2_TARGET} NetUdp)
set_target_properties(${NETUDP_EXAMPLE2_TARGET} PROPERTIES FOLDER "${NETUDP_FOLDER_PREFIX}/Examples")

set(NETUDP_EXAMPLE3_TARGET ${NETUDP_TARGET}_EchoClientServer)
message(STATUS "Add Example : ${NETUDP_EXAMPLE3_TARGET}")
add_executable(${NETUDP_EXAMPLE3_TARGET} "${CMAKE_CURRENT_SOURCE_DIR}/EchoClientServer.cpp")
target_link_libraries(${NETUDP_EXAMPLE3_TARGET} NetUdp)
set_target_properties(${NETUDP_EXAMPLE3_TARGET} PROPERTIES FOLDER "${NETUDP_FOLDER_PREFIX}/Examples")

set(NETUDP_EXAMPLE4_TARGET ${NETUDP_TARGET}_EchoMulticastLoopback)
message(STATUS "Add Example : ${NETUDP_EXAMPLE4_TARGET}")
add_executable(${NETUDP_EXAMPLE4_TARGET} "${CMAKE_CURRENT_SOURCE_DIR}/EchoMulticastLoopback.cpp")
target_link_libraries(${NETUDP_EXAMPLE4_TARGET} NetUdp)
set_target_properties(${NETUDP_EXAMPLE4_TARGET} PROPERTIES FOLDER "${NETUDP_FOLDER_PREFIX}/Examples")